--- a/Sales_data_csv.ipynb
+++ b/Sales_data_csv.ipynb
@@ -572,11 +572,11 @@
         "sales.shape"
       ],
       "metadata": {
-        "id": "Pjm9wBRqoamc",
-        "outputId": "e8e54781-a76d-40ec-d187-e887119cdacc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Pjm9wBRqoamc",
+        "outputId": "e8e54781-a76d-40ec-d187-e887119cdacc"
       },
       "execution_count": 2,
       "outputs": [
@@ -598,11 +598,11 @@
         "sales.info()"
       ],
       "metadata": {
-        "id": "nL04NeWbpXWs",
-        "outputId": "3b7a771f-7f7a-46a6-8322-db6e216b9264",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nL04NeWbpXWs",
+        "outputId": "3b7a771f-7f7a-46a6-8322-db6e216b9264"
       },
       "execution_count": 3,
       "outputs": [
@@ -645,12 +645,12 @@
         "sales.describe()"
       ],
       "metadata": {
-        "id": "SgKnk2wypzuU",
-        "outputId": "8879d37b-c3fc-451e-cb67-e266dab3b692",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "SgKnk2wypzuU",
+        "outputId": "8879d37b-c3fc-451e-cb67-e266dab3b692"
       },
       "execution_count": 5,
       "outputs": [
@@ -1055,12 +1055,12 @@
         "sales['Unit_Cost'].describe()"
       ],
       "metadata": {
-        "id": "lWZAQW_Dq46b",
-        "outputId": "efa15680-21b3-4b4a-d0a3-5e9c2fc92ebf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 335
-        }
+        },
+        "id": "lWZAQW_Dq46b",
+        "outputId": "efa15680-21b3-4b4a-d0a3-5e9c2fc92ebf"
       },
       "execution_count": 6,
       "outputs": [
@@ -1149,11 +1149,11 @@
         "sales['Unit_Cost'].mean()\n"
       ],
       "metadata": {
-        "id": "wVu5qM6nrCmY",
-        "outputId": "55915212-136f-446e-ba80-cf42030ac528",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wVu5qM6nrCmY",
+        "outputId": "55915212-136f-446e-ba80-cf42030ac528"
       },
       "execution_count": 9,
       "outputs": [
@@ -1175,11 +1175,11 @@
         "sales['Unit_Cost'].median()"
       ],
       "metadata": {
-        "id": "NVZl58nmrdcG",
-        "outputId": "2ff36201-047a-4e50-ba3a-f93e019751bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NVZl58nmrdcG",
+        "outputId": "2ff36201-047a-4e50-ba3a-f93e019751bd"
       },
       "execution_count": 10,
       "outputs": [
@@ -1201,12 +1201,12 @@
         "sales['Unit_Cost'].plot(kind='box', vert=False, figsize=(14,6))"
       ],
       "metadata": {
-        "id": "D3Hwdxj2rexM",
-        "outputId": "199509c9-1fb5-4fff-9bdd-acebe777aa7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 539
-        }
+        },
+        "id": "D3Hwdxj2rexM",
+        "outputId": "199509c9-1fb5-4fff-9bdd-acebe777aa7f"
       },
       "execution_count": 11,
       "outputs": [
@@ -1238,12 +1238,12 @@
         "sales['Unit_Cost'].plot(kind='density', figsize=(14,6))"
       ],
       "metadata": {
-        "id": "A9L2k7HZsdFO",
-        "outputId": "2d2446b6-8377-467a-f25d-52381dfe74ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 539
-        }
+        },
+        "id": "A9L2k7HZsdFO",
+        "outputId": "2d2446b6-8377-467a-f25d-52381dfe74ce"
       },
       "execution_count": 12,
       "outputs": [
@@ -1277,12 +1277,12 @@
         "ax.axvline(sales['Unit_Cost'].median(), color='green')"
       ],
       "metadata": {
-        "id": "Y9wR_Ib7svc0",
-        "outputId": "37625ba7-863b-458c-a47a-c847eacb28cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 539
-        }
+        },
+        "id": "Y9wR_Ib7svc0",
+        "outputId": "37625ba7-863b-458c-a47a-c847eacb28cb"
       },
       "execution_count": 16,
       "outputs": [
@@ -1316,12 +1316,12 @@
         "ax.set_ylabel('Number of Sales')"
       ],
       "metadata": {
-        "id": "RxwC8lJ6u9IE",
-        "outputId": "ac17fd80-dc92-4ef8-8151-b7181c5dd2ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 559
-        }
+        },
+        "id": "RxwC8lJ6u9IE",
+        "outputId": "ac17fd80-dc92-4ef8-8151-b7181c5dd2ca"
       },
       "execution_count": 17,
       "outputs": [
@@ -1353,12 +1353,12 @@
         "sales.head()"
       ],
       "metadata": {
-        "id": "ejezKpqPvkn1",
-        "outputId": "91dbfeb0-63cc-40e9-aa23-6c17e47f10ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 399
-        }
+        },
+        "id": "ejezKpqPvkn1",
+        "outputId": "91dbfeb0-63cc-40e9-aa23-6c17e47f10ea"
       },
       "execution_count": 18,
       "outputs": [
@@ -1770,12 +1770,12 @@
         "sales['Age_Group'].value_counts()"
       ],
       "metadata": {
-        "id": "JAnHo8hEvqyh",
-        "outputId": "402090e4-5f2a-4cda-caf7-3bf1b6108652",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
-        }
+        },
+        "id": "JAnHo8hEvqyh",
+        "outputId": "402090e4-5f2a-4cda-caf7-3bf1b6108652"
       },
       "execution_count": 19,
       "outputs": [
@@ -1849,12 +1849,12 @@
         "sales['Age_Group'].value_counts().plot(kind='pie',figsize=(6,6))"
       ],
       "metadata": {
-        "id": "69jUdh9XxJ04",
-        "outputId": "c0ca1f13-7402-4093-a85a-fcd6ee9689ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 516
-        }
+        },
+        "id": "69jUdh9XxJ04",
+        "outputId": "c0ca1f13-7402-4093-a85a-fcd6ee9689ba"
       },
       "execution_count": 20,
       "outputs": [
@@ -1887,12 +1887,12 @@
         "ax.set_ylabel('Number of Sales')"
       ],
       "metadata": {
-        "id": "3Xk7Chf7xYlO",
-        "outputId": "9229bb55-4d64-47a9-bf1e-4d0501a0ed8f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 689
-        }
+        },
+        "id": "3Xk7Chf7xYlO",
+        "outputId": "9229bb55-4d64-47a9-bf1e-4d0501a0ed8f"
       },
       "execution_count": 23,
       "outputs": [
@@ -1925,12 +1925,12 @@
         "corr"
       ],
       "metadata": {
-        "id": "9ogskOEMx8Np",
-        "outputId": "c36ea711-c6fa-45b3-be0d-f31b08811d7d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 331
-        }
+        },
+        "id": "9ogskOEMx8Np",
+        "outputId": "c36ea711-c6fa-45b3-be0d-f31b08811d7d"
       },
       "execution_count": 27,
       "outputs": [
@@ -2389,12 +2389,12 @@
         "plt.yticks(range(len(corr.columns)), corr.columns)"
       ],
       "metadata": {
-        "id": "whAZsaWmzLDN",
-        "outputId": "bc4d156a-153c-42ca-eafb-6b4fd8525391",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 860
-        }
+        },
+        "id": "whAZsaWmzLDN",
+        "outputId": "bc4d156a-153c-42ca-eafb-6b4fd8525391"
       },
       "execution_count": 30,
       "outputs": [
@@ -2452,12 +2452,12 @@
         "sales.plot(kind='scatter',x='Customer_Age',y='Revenue',figsize=(6,6))"
       ],
       "metadata": {
-        "id": "LRHxmO4D0b9I",
-        "outputId": "2b4268ad-7281-4de0-b89b-25d66d03430d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 559
-        }
+        },
+        "id": "LRHxmO4D0b9I",
+        "outputId": "2b4268ad-7281-4de0-b89b-25d66d03430d"
       },
       "execution_count": 32,
       "outputs": [
@@ -2489,12 +2489,12 @@
         "sales.plot(kind='scatter',x='Revenue',y='Profit',figsize=(6,6))"
       ],
       "metadata": {
-        "id": "kdEZKQ4H0889",
-        "outputId": "ca3f25ee-31f5-42e8-d5b6-47717faf64b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 559
-        }
+        },
+        "id": "kdEZKQ4H0889",
+        "outputId": "ca3f25ee-31f5-42e8-d5b6-47717faf64b6"
       },
       "execution_count": 33,
       "outputs": [
@@ -2527,12 +2527,12 @@
         "ax.set_ylabel('Profit')"
       ],
       "metadata": {
-        "id": "NidMk_I51Gk-",
-        "outputId": "06a2df0c-6a14-433a-8d46-844e3b41da07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 595
-        }
+        },
+        "id": "NidMk_I51Gk-",
+        "outputId": "06a2df0c-6a14-433a-8d46-844e3b41da07"
       },
       "execution_count": 34,
       "outputs": [
@@ -2565,12 +2565,12 @@
         "sales[boxplot_cols].plot(kind='box', subplots=True, layout=(2,3), figsize=(14,8))"
       ],
       "metadata": {
-        "id": "RMDCRi1p1hDZ",
-        "outputId": "18139b81-9aab-41fb-996a-02b0cccd2b7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 935
-        }
+        },
+        "id": "RMDCRi1p1hDZ",
+        "outputId": "18139b81-9aab-41fb-996a-02b0cccd2b7c"
       },
       "execution_count": 35,
       "outputs": [
@@ -2652,6 +2652,95 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sales['Revenue_per_Age']=sales['Revenue']/sales['Customer_Age']\n",
+        "sales['Revenue_per_Age'].head()"
+      ],
+      "metadata": {
+        "id": "cgq3id-m2mwP",
+        "outputId": "22887065-11ff-4ca4-8582-5c6002a7815f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 241
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    50.000000\n",
+              "1    50.000000\n",
+              "2    49.000000\n",
+              "3    42.612245\n",
+              "4     8.893617\n",
+              "Name: Revenue_per_Age, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Revenue_per_Age</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>50.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>50.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>49.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>42.612245</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>8.893617</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YChqLgC929jP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
