--- a/Sales_data_csv.ipynb
+++ b/Sales_data_csv.ipynb
@@ -2734,13 +2734,51 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# **Column Wrangling**"
+      ],
       "metadata": {
-        "id": "YChqLgC929jP"
+        "id": "SR9dKpqgLPE_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Adding and clculating a new Revenue_per_age column"
+      ],
+      "metadata": {
+        "id": "Z-Mm2hpiLaok"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sales['Revenue_per_Age']=sales['Revenue']/sales['Customer_Age']\n",
+        "sales['Revenue_per_Age'].head()"
+      ],
+      "metadata": {
+        "id": "YChqLgC929jP",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "outputId": "89e80cab-16ec-4b2e-bb4f-896bf383ef9f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'sales' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-d756907583a8>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msales\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Revenue_per_Age'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msales\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Revenue'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0msales\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Customer_Age'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msales\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Revenue_per_Age'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'sales' is not defined"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
